--- a/register/templates/vote.html
+++ b/register/templates/vote.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load bootstrap3 %}
+{% load utils %}
 {% load static %}
 {% block title %}Vote applications - {% endblock %}
 {% block head %}
@@ -38,8 +39,8 @@
                         <h4 class="text-center">Background</h4>
                         <dl class="dl-horizontal">
                             {% include 'include/field.html' with desc='First time' value=app.first_timer|yesno:'Yes,No,Maybe' %}
-                            {% include 'include/field.html' with desc='Looking forward?' value=app.description %}
-                            {% include 'include/field.html' with desc='Projects?' value=app.projects %}
+                            {% include 'include/field.html' with desc='Looking forward?' value=app.description|safe|urlize|url_blank %}
+                            {% include 'include/field.html' with desc='Projects?' value=app.projects|safe|urlize|url_blank %}
                             {% include 'include/field.html' with desc='Team mates' value=app.teammates %}
                             {% include 'include/field.html' with desc='Excited about' value=app.excited %}
                         </dl>
