--- a/register/templates/confirm.html
+++ b/register/templates/confirm.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block head %}
-    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 {% endblock %}
 
 {% block body %}
@@ -37,7 +38,7 @@
 
                 </div>
             </div>
-            If you can't make it anymore, you can still cancel your participation <a href="{{ cancel }}">here</a>.
+            If you can't make it anymore, you can still cancel your participation <a href="{% url 'cancel_app' application.id %}">here</a>.
             {% endif %}
         </div>
     </div>
