--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    {%  block head %}
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
+    {% block head %}
     {% endblock %}
 
     <title>{% block title %}HackUPC Registration app{% endblock %}</title>
