--- a/register/templates/app_vote.html
+++ b/register/templates/app_vote.html
@@ -5,9 +5,6 @@
         <div class="col-md-6 col-md-offset-3">
             {% if app %}
                 <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4>{HackUPC application</h4>
-                    </div>
                     <div class="panel-body">
 
                         <dl class="dl-horizontal">
@@ -15,15 +12,13 @@
                             <dd>{{ app.name }}, {{ app.lastname }}</dd>
                             <dt>From:</dt>
                             <dd>{{ app.country }}</dd>
-                            <dt>University</dt>
+                            <dt>University:</dt>
                             <dd>{{ app.university }}</dd>
+                            <dt>Degree:</dt>
+                            <dd>{{ app.degree }}</dd>
+                            <dt>Excited about</dt>
+                            <dd>{{ app.excited }}</dd>
                         </dl>
-                        <p><b>University: </b>{{ app.university }}</p>
-
-                        <p><b>Degree: </b>{{ app.degree }}</p>
-
-                        <p><b>Excited about: </b>{{ app.excited }}</p>
-
 
                         <p>
                             {% if app.devpost %}
