--- a/register/templates/app_vote.html
+++ b/register/templates/app_vote.html
@@ -1,47 +1,78 @@
 {% extends "base.html" %}
-
+{% load humanize %}
+{% load static %}
+{% block head %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+{% endblock %}
 {% block body %}
     <div class="row margin-top">
         <div class="col-md-6 col-md-offset-3">
             {% if app %}
                 <div class="panel panel-default">
+                    <div class="panel-heading">
+                        {# We set the title as lennyface, in out efforts to anonimize the data.. Okay, maybe no #}
+                        <h4 class="text-center">{{ app.lennyface }}</h4>
+                    </div>
                     <div class="panel-body">
-
+                        <h4 class="text-center">Personal</h4>
                         <dl class="dl-horizontal">
-                            <dt>Name,Last name:</dt>
-                            <dd>{{ app.name }}, {{ app.lastname }}</dd>
-                            <dt>From:</dt>
-                            <dd>{{ app.country }}</dd>
-                            <dt>University:</dt>
-                            <dd>{{ app.university }}</dd>
-                            <dt>Degree:</dt>
-                            <dd>{{ app.degree }}</dd>
-                            <dt>Excited about</dt>
-                            <dd>{{ app.excited }}</dd>
-                        </dl>
+                            {% include 'include/field.html' with desc='Name' value=app.name|add:', '|add:app.lastname %}
+                            {% include 'include/field.html' with desc='Submitted' value=app.submission_date|naturaltime %}
+                            {% include 'include/field.html' with desc='Country' value=app.country %}
+                            {% include 'include/field.html' with desc='Travel reimbursement?' value=app.scholarship|yesno:'Yes,No,Maybe' %}
 
-                        <p>
-                            {% if app.devpost %}
-                                <a href="{{ app.devpost }}"> <img src="{{ dp_image_src }} "
-                                                                  style="width:70px;height:70px;">
-                                </a>
+
+                            {% include 'include/field.html' with desc='Under age (-18)' value=app.under_age|yesno:'Yes,No,Maybe' %}
+                        </dl>
+                        <h4 class="text-center">Academic</h4>
+                        <dl class="dl-horizontal">
+                            {% include 'include/field.html' with desc='University' value=app.university %}
+                            {% include 'include/field.html' with desc='Graduation' value=app.graduation %}
+                            {% include 'include/field.html' with desc='Degree' value=app.degree %}
+                        </dl>
+                        <h4 class="text-center">Background</h4>
+                        <dl class="dl-horizontal">
+                            {% include 'include/field.html' with desc='First time' value=app.first_time|yesno:'Yes,No,Maybe' %}
+                            {% include 'include/field.html' with desc='Description' value=app.description %}
+                            {% include 'include/field.html' with desc='Projects' value=app.projects %}
+                            {% include 'include/field.html' with desc='Team mates' value=app.teammates %}
+                            {% include 'include/field.html' with desc='Excited about' value=app.excited %}
+                        </dl>
+                        <h4 class="text-center">Social</h4>
+
+                        <p class="text-center">
+                            {% if app.github and not app.github == 'http://' %}
+                                <a target="_blank" href="{{ app.github }}" class="icon fa fa-github"></a>
                             {% endif %}
-                            {% if app.github %}
-                                <a href="{{ app.github }}"> <img src="{{ dp_image_src }} "
-                                                                 style="width:70px;height:70px;">
+                            {% if app.linkedin and not app.linkedin == 'http://' %}
+                                <a target="_blank" href="{{ app.linkedin }}" class="icon fa fa-linkedin"></a>
+                            {% endif %}
+                            {% if app.site and not app.site == 'http://' %}
+                                <a target="_blank" href="{{ app.site }}" class="icon fa fa-globe"></a>
+                            {% endif %}
+                            {% if app.devpost and not app.devpost == 'http://' %}
+                                <a target="_blank" href="{{ app.devpost }}" class="icon">
+                                    <img class="icon" src="{% static 'img/devpost.svg' %}"/>
                                 </a>
                             {% endif %}
                         </p>
+
                     </div>
                     <div class="panel-footer">
                         <form action="" method="post">
                             {% csrf_token %}
-                            <button class="btn btn-success btn-block" name="accept" value="accept">Accept</button>
+                            <button class="btn btn-success btn-block" name="accept" value="accept">Get him in!</button>
                         </form>
                         <form action="" method="post">
                             {% csrf_token %}
-                            <button name="decline" class="btn btn-danger btn-block" value="decline">Decline</button>
+                            <button name="skip" class="btn btn-default btn-block" value="skip">Not sure</button>
                         </form>
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            <button name="decline" class="btn btn-danger btn-block" value="decline">Nop</button>
+                        </form>
+
+
                     </div>
                 </div>
             {% else %}
