--- a/register/templates/vote.html
+++ b/register/templates/vote.html
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             {% else %}
-                No applications left to be voted.<br> Good job! Enjoy the sun outside!
+                <h4 class="text-center">No applications left to be voted.<br> Good job! Enjoy the sun outside!</h4>
             {% endif %}
         </div>
     </div>
