--- a/register/templates/vote.html
+++ b/register/templates/vote.html
@@ -62,7 +62,7 @@
                         <form action="" method="post">
                             {% csrf_token %}
                             <button class="btn btn-success btn-block" name="accept" value="accept">Get him in!</button>
-                            <button name="skip" class="btn btn-default btn-block" value="skip">Not sure</button>
+                            <button name="skip" class="btn btn-default btn-block" value="skip">Skip application</button>
                             <button name="decline" class="btn btn-danger btn-block" value="decline">Nop</button>
                         </form>
 
