--- a/register/static/css/main.css
+++ b/register/static/css/main.css
@@ -1,3 +1,23 @@
+body {
+    background-color: #303F9F;
+}
+
+nav.navbar {
+    -webkit-box-shadow: 0 0 4px 5px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 0 4px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 4px 5px rgba(0, 0, 0, 0.2);
+    background-color: white;
+}
+
+div.panel {
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+}
+
 .confirm-content {
     margin-top: 70px
 }
@@ -5,7 +25,6 @@
 .margin-top {
     margin-top: 70px;
 }
-
 
 a.icon {
     text-decoration: none;
