finish details in presentations

--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block head %}
     {% endblock %}
 
-    <title>{% block title %}HackUPC Registration app{% endblock %}</title>
+    <title>{% block title %}My HackUPC{% endblock %}</title>
 </head>
 
 
@@ -21,10 +21,20 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <a class="navbar-brand" href="/">HackUPC 2017</a>
         </div>
         {% if request.user.is_authenticated %}
-            <p class="navbar-text">Signed in as {{ request.user.username }}</p>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+            <p class="navbar-text">Welcome back <b>{{ request.user.username }}</b></p>
+
             <ul class="nav navbar-nav navbar-right">
                 {% if request.user.is_staff %}
                     <li><a href="{% url 'admin:index' %}">Admin</a></li>
@@ -33,8 +43,9 @@
                 <li><a href="{% url 'logout' %}">Logout</a></li>
 
             </ul>
+            </div>
         {% endif %}
-    </div>
+        </div>
 </nav>
 <div class="content container">
 
