--- a/register/templates/confirm.html
+++ b/register/templates/confirm.html
@@ -12,33 +12,36 @@
             {{ self.title }}
 
             {% if error %}
-            <div class="panel panel-danger">
-                <div class="panel-heading">
-                    <h3 class="panel-title">We are sorry, {{application.name}}</h3>
+                <div class="panel panel-danger">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">We are sorry, {{ application.name }}</h3>
+                    </div>
+                    <div class="panel-body">
+                        {{ error }}
+                    </div>
                 </div>
-                <div class="panel-body">
-                    {{ error }}
-                </div>
-            </div>
 
             {% else %}
 
-            <div class="panel panel-success">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Thanks for confirming, {{ application.name }}!</h3>
-                </div>
-                <div class="panel-body">
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Thanks for confirming, {{ application.name }}!</h3>
+                    </div>
+                    <div class="panel-body">
 
-                    {% if reconfirming %}
-                        You already confirmed your spot before, {{ application.name }}. But we love your enthusiasm :)
-                    {% else %}
-                        {{ application.name }}, you just confirmed your spot at HackUPC Spring 2017!
-                    {% endif %}
-                    We can't wait to have you here.
-
+                        {% if reconfirming %}
+                            You already confirmed your spot before, {{ application.name }}. But we love your enthusiasm
+                            :)
+                        {% else %}
+                            {{ application.name }}, you just confirmed your spot at HackUPC Spring 2017!
+                        {% endif %}
+                        We can't wait to have you here.
+                        <br><br>
+                        If you can't make it anymore, please cancel your participation <a
+                            href="{% url 'cancel_app' application.id %}">here</a>.
+                    </div>
                 </div>
-            </div>
-            If you can't make it anymore, you can still cancel your participation <a href="{% url 'cancel_app' application.id %}">here</a>.
+
             {% endif %}
         </div>
     </div>
