--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -9,6 +9,13 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <meta name="theme-color" content="#03A9B5">
+    <meta name="author" content="Hackers@UPC">
+    <meta property="og:title" content="My HackUPC"/>
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}" />
+    <meta property="og:site_name" content="My HackUPC"/>
+    <meta name="description" content="Join us for BarcelonaTech's hackathon. 500 hackers. 36h. March 3rd-5th.">
+    <meta property="og:description" content="Join us for BarcelonaTech's hackathon. 500 hackers. 36h. March 3rd-5th."/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block head %}
     {% endblock %}
@@ -33,19 +40,19 @@
         {% if request.user.is_authenticated %}
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-            <p class="navbar-text">Welcome back <b>{{ request.user.username }}</b></p>
+                <p class="navbar-text">Welcome back <b>{{ request.user.username }}</b></p>
 
-            <ul class="nav navbar-nav navbar-right">
-                {% if request.user.is_staff %}
-                    <li><a href="{% url 'admin:index' %}">Admin</a></li>
-                {% endif %}
-                <li><a href="{% url 'password_change' %}">Change password</a></li>
-                <li><a href="{% url 'logout' %}">Logout</a></li>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if request.user.is_staff %}
+                        <li><a href="{% url 'admin:index' %}">Admin</a></li>
+                    {% endif %}
+                    <li><a href="{% url 'password_change' %}">Change password</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
 
-            </ul>
+                </ul>
             </div>
         {% endif %}
-        </div>
+    </div>
 </nav>
 <div class="content container">
 
