--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -12,15 +12,16 @@
     <meta name="theme-color" content="#03A9B5">
     <meta name="author" content="Hackers@UPC">
     <meta property="og:title" content="My HackUPC"/>
-    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}" />
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}"/>
     <meta property="og:site_name" content="My HackUPC"/>
     <meta name="description" content="Join us for BarcelonaTech's hackathon. 500 hackers. 36h. March 3rd-5th.">
     <meta property="og:description" content="Join us for BarcelonaTech's hackathon. 500 hackers. 36h. March 3rd-5th."/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Ek+Mukta" rel="stylesheet">
     {% block head %}
     {% endblock %}
 
-    <title>{% block title %}My HackUPC{% endblock %}</title>
+    <title>{% block title %}{% endblock %}My HackUPC</title>
 </head>
 
 
@@ -35,7 +36,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">HackUPC 2017</a>
+            <a class="navbar-brand" href="/">My HackUPC</a>
         </div>
         {% if request.user.is_authenticated %}
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
