--- a/register/templates/cancel.html
+++ b/register/templates/cancel.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
-
+{% block title %}Cancel application - {% endblock %}
 
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
