--- a/register/templates/vote.html
+++ b/register/templates/vote.html
@@ -81,8 +81,7 @@
                     </div>
                 </div>
             {% else %}
-                <h4 class="text-center" style="color: white;">No applications left to be voted.<br> Good job! Enjoy the
-                    sun outside!</h4>
+                <h4 class="text-center" style="color: white;">No applications left to be voted.<br> Good job! Enjoy the sun outside!</h4>
             {% endif %}
         </div>
     </div>
