added invitation interface
fixtures, send reminder

fix

fix fixtures: exclude things

refactor visualization invitations

rename a bit email

fix error for empty recalculations

fix 0 sd problem

fix first_timer visualization

add 500 template. closes #40

replace order for count of calculated vote. closes #42

add remove all pyc on restart script

customize django admin

add jet dashboard

add redirect favicon.ico

add custom dashboard

add reviewer leaderboard

improve reviewers design

make BestReviewersModule available as dashboard module

add google analytics modules

set restart.sh as executable

add db.json to gitignore

replace fixture for dummy applications fixture

--- a/register/templates/vote.html
+++ b/register/templates/vote.html
@@ -34,7 +34,7 @@
                         </dl>
                         <h4 class="text-center">Background</h4>
                         <dl class="dl-horizontal">
-                            {% include 'include/field.html' with desc='First time' value=app.first_time|yesno:'Yes,No,Maybe' %}
+                            {% include 'include/field.html' with desc='First time' value=app.first_timer|yesno:'Yes,No,Maybe' %}
                             {% include 'include/field.html' with desc='Description' value=app.description %}
                             {% include 'include/field.html' with desc='Projects' value=app.projects %}
                             {% include 'include/field.html' with desc='Team mates' value=app.teammates %}
