--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -47,6 +47,8 @@
                     {% if request.user.is_staff %}
                         <li><a href="{% url 'admin:index' %}">Admin</a></li>
                     {% endif %}
+                    <li><a href="{% url 'vote' %}">Vote</a></li>
+                    <li><a href="{% url 'ranking' %}">Ranking</a></li>
                     <li><a href="{% url 'password_change' %}">Change password</a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
 
