Names of applications with empty link.

--- a/checkin/templates/templates/check-in-list.html
+++ b/checkin/templates/templates/check-in-list.html
@@ -16,7 +16,7 @@
                     <div class="panel-body">
 
                         {% for application in applications %}
-                            <h4>sadjlsakds</h4>
+                            <a href=""><h4>{{ application.name }} {{ application.lastname }}</h4></a>
                         {% endfor %}
 
 
