Hacker detail view for the checkin

--- a/checkin/templates/templates/check-in-list.html
+++ b/checkin/templates/templates/check-in-list.html
@@ -16,7 +16,7 @@
                     <div class="panel-body">
 
                         {% for application in applications %}
-                            <a href=""><h4>{{ application.name }} {{ application.lastname }}</h4></a>
+                            <a href="/checkin/hacker?id={{ application.id }}"><h4>{{ application.name }} {{ application.lastname }}</h4></a>
                         {% endfor %}
 
 
