--- a/checkin/templates/templates/check-in-hacker.html
+++ b/checkin/templates/templates/check-in-hacker.html
@@ -1,10 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load humanize %}
+{% load static %}
+{% block title %}Vote applications - {% endblock %}
+{% block head %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+{% endblock %}
+{% block body %}
+    <div class="row margin-top">
+        <div class="col-md-6 col-md-offset-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="text-center">{{ app.lennyface }}</h4>
+                    </div>
+                    <div class="panel-body">
+                        <h4 class="text-center">{{ app.name }} {{ app.lastname }}</h4>
+                        <dl class="dl-horizontal">
 
-</body>
-</html>
+                        </dl>
+
+                    </div>
+                    <div class="panel-footer">
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            <input type="hidden" name="app_id" value="{{ app.id }}"/>
+                            <button class="btn btn-success btn-block" name="Check In" value="checkin">Check In!</button>
+                        </form>
+
+
+                    </div>
+                </div>
+        </div>
+    </div>
+{% endblock %}
