adapt confirm view to show error if expired

--- a/register/templates/confirm.html
+++ b/register/templates/confirm.html
@@ -18,6 +18,9 @@
                     </div>
                     <div class="panel-body">
                         {{ error }}
+                        <br><br>
+                        Please contact us if you think this is
+                        an error: <a href="mailto:contact@hackupc.com">contact@hackupc.com</a>
                     </div>
                 </div>
 
