--- a/checkin/templates/templates/check-in-list.html
+++ b/checkin/templates/templates/check-in-list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load static %}
-{% block title %}Vote applications - {% endblock %}
+{% block title %}Check In - {% endblock %}
 {% block head %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 {% endblock %}
@@ -10,7 +10,6 @@
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-default">
                     <div class="panel-heading">
-                        {# We set the title as lennyface, in out efforts to anonimize the data.. Okay, maybe no #}
                         <h4 class="text-center">Check In</h4>
                     </div>
                     <div class="panel-body">
