add link to Github issues. closes #59

--- a/register/templates/500.html
+++ b/register/templates/500.html
@@ -13,4 +13,5 @@
     <h1 class="text-center margin-top white-text">500 Oops</h1>
     <h2  class="text-center white-text">Server Error </h2>
     <p  class="text-center white-text">It seems like you found an error. Please reach us out at <a class="white-text" href="mailto:contact@hackupc.com">contact@hackupc.com</a> if the problem persists.</p>
+    <p  class="text-center white-text">Or you can open an issue in our <a class="white-text" target="_blank" href="https://github.com/hackupc/mercuryhack/issues/new">GitHub repository</a>.</p>
 {% endblock %}
