--- a/checkin/templates/templates/check-in-list.html
+++ b/checkin/templates/templates/check-in-list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load humanize %}
+{% load table_tags %}
 {% load static %}
 {% block title %}Check In - {% endblock %}
 {% block head %}
@@ -13,10 +14,7 @@
                         <h4 class="text-center">Check In</h4>
                     </div>
                     <div class="panel-body">
-
-                        {% for application in applications %}
-                            <a href="/checkin/hacker/{{ application.id }}"><h4>{{ application.name }} {{ application.lastname }}</h4></a>
-                        {% endfor %}
+                        {% render_table applicationsTable %}
                     </div>
                 </div>
         </div>
