--- a/checkin/templates/checkin/hacker.html
+++ b/checkin/templates/checkin/hacker.html
@@ -26,7 +26,7 @@
                         <input type="hidden" name="app_id" value="{{ app.id }}"/>
                         <button class="btn btn-success btn-block" name="checkin" value="checkin">Check In!</button>
                     </form>
-
+                    <a class="btn btn-default btn-block" href="javascript:history.back()">Go back</a>
 
                 </div>
             </div>
