--- a/checkin/templates/checkin/list_all.html
+++ b/checkin/templates/checkin/list_all.html
@@ -2,5 +2,5 @@
 
 {% block panel_title %}All applications{% endblock %}
 {% block extra_buttons %}
-    <a class="btn btn-default" href="{% url 'check_in_list' %}">< Back</a>
+    <a class="btn btn-default btn-block" href="{% url 'check_in_list' %}">Confirmed applications</a>
 {% endblock %}
