--- a/checkin/templates/checkin/list.html
+++ b/checkin/templates/checkin/list.html
@@ -5,8 +5,8 @@
 {% block title %}Check In - {% endblock %}
 {% block head %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-    <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.2/js/bootstrap.min.js"></script>
+    <script src="//libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <script src="//cdn.bootcss.com/twitter-bootstrap/3.0.2/js/bootstrap.min.js"></script>
 {% endblock %}
 {% block body %}
     <div class="row margin-top">
